clap_derive/tests/ui/non_existent_attr.stderr
error[E0599]: no method named `non_existing_attribute` found for struct `clap::Arg<'_>` in the current scope
  --> $DIR/non_existent_attr.rs:14:19
   |
14 |     #[clap(short, non_existing_attribute = 1)]
   |                   ^^^^^^^^^^^^^^^^^^^^^^ method not found in `clap::Arg<'_>`
